<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/menu">
        <menu>
            <item
                android:id="@+id/homeBtnMenu"
                android:title="@string/home"
                android:icon="@drawable/baseline_home_24"
                android:onClick="MenuItem_goHome"
                />
            <item
                android:id="@+id/HospitalsBtnMenu"
                android:title="@string/Doctors"
                android:icon="@drawable/outline_local_hospital_24"
                android:onClick="MenuItem_goHospitals"
                />
            <item
                android:id="@+id/Profile"
                android:title="@string/Profile"
                android:icon="@drawable/outline_account_circle_24"
                android:onClick="MenuItem_goProfile"
                />
            <item
                android:id="@+id/LogOutBtnMenu"
                android:title="@string/LogOut"
                android:icon="@drawable/baseline_logout_24"
                android:onClick="MenuItem_Logout"
                />
        </menu>
    </item>
</menu>